[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/Fonts/SpaceRave-6YE1M.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Audio/Music/MENU_MUSIC.mp3" type="AudioStream" id=2]
[ext_resource path="res://Menus/Images/LevelSel.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/LevelsSel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="LevelsSel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.427451, 0.317647, 0.317647, 1 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 129.0
margin_top = 189.0
margin_right = 895.0
margin_bottom = 411.0
custom_constants/separation = 50

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 766.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 284.0
margin_right = 482.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.721569, 0.243137, 0.243137, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.27451, 0.27451, 1 )
text = "Levels"
uppercase = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 766.0
margin_bottom = 222.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 766.0
margin_bottom = 100.0

[node name="Level 1" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
text = "Plains, Mongolia"

[node name="Spacer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 0 )

[node name="Level 2" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
disabled = true
text = "Snowscapes, Russia"

[node name="Spacer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 0 )

[node name="Level 3" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 616.0
margin_right = 766.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
disabled = true
text = "Level 3"

[node name="MainBackground" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/Level 2" to="." method="_on_Level_2_pressed"]
